# torch-whl-urls

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __main__.py  utils.py
