[project]
name = "torchdeps"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jean Auger", email = "jean.auger.42@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "typer>=0.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
